>Fix problems in PersonalAccDataBody and provide full adaptivity for this screen >Stil remain bug with horizontal scrollBar appearing in mobile ver

--- a/store-prototype/src/services/AccountBody/AccountBody.module.css
+++ b/store-prototype/src/services/AccountBody/AccountBody.module.css
@@ -183,3 +183,19 @@
         width:500px;
     }
 }
+
+@media(max-width:560px){
+    .dataBodyMobileModal{
+        width:400px;
+    }
+}
+
+@media(max-width:400px)
+{
+    .dataBodyMobileModal{
+        left:0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+    }
+}
